Make user language required field
